1998-07-02  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garhea.adb: Add debugging information.

1998-06-23  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-garuti.ads, s-garuti.adb: Move exception utilities to
 	System.Garlic.Exceptions.
	
	* s-garexc.adb, s-garexc.ads: Move exception utilities to
 	System.Garlic.Exceptions.

	* s-gartcp.adb: Update because of previous changes.

	* s-parint.adb: Use function Different which was implemented but
	never used. Different compares to Version_ID and adds a special
	rule for Empty_Version (to please ADEPT project).

	* Makefile.am, Makefile.in: Update because of new unit.

1998-06-16  Samuel Tardieu  <sam@inf.enst.fr>

	* s-gasoli.ads, s-gasoli.adb: New package containing soft links
	for termination-related stuff.

	* s-gaphlo.ads, s-gaphlo.adb: Use pragma Stream_Convert instead
	than defining stream attributes that do the same thing.

	* s-gartcp.adb: Return "tcp" only as location when the light
	runtime has been activated to emphasize that fact.

	* s-garhea.ads: Move the types Public_Data and Partition_Data into 
	the body, and add access functions to read the various values.
	(Name, Termination_Policy, Location): new functions
	
	* s-garhea.adb: Do not send shutdown messages to partition whose
	termination policy is Local_Termination.
	(Name, Termination_Policy, Location): new functions

	* s-garfil.adb: Use the new function Name from System.Garlic.Heart 
	to get a partition's name.

	* s-garter.ads: Empty spec since now soft links are used for
	termination strategies.

	* s-garter.adb: Do not poll partitions whose termination policy is 
	Local_Termination.

	* linktest.adb: New file, that will be used in developper mode to
	test that no circular dependencies have been introduced.

	* Makefile.am: Add linktest target.

	* s-garlic.ads: Move Communication_Error from System.Garlic.Types
	to here to prevent an elaboration circularity in
	System.Garlic.Utils.

	* s-garuti.adb: Remove with clause on System.Garlic.Types since